[package]
name = "litcat"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Shan Shaji <shanshajiv@gmail.com>"]
description = "A CLI tool for viewing patches with colors"
homepage = "https://github.com/shan-shaji/litcat"
license = "BSD-3-Clause"
keywords = ["cat", "cli", "git", "patch"]
categories = ["development-tools::debugging", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
